<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@drawable/loginandregister">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="407dp"
        android:layout_height="727dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/registerTitle"
            android:layout_width="203dp"
            android:layout_height="50dp"
            android:layout_marginStart="102dp"
            android:layout_marginTop="14dp"
            android:text="@string/register"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textColor="#FFFFFF"
            android:textSize="34sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/registerName"
            android:layout_width="297dp"
            android:layout_height="58dp"
            android:layout_marginStart="55dp"
            android:layout_marginTop="78dp"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="text"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerTitle"
            android:autofillHints="" />

        <EditText
            android:id="@+id/registerEmail"
            android:layout_width="297dp"
            android:layout_height="58dp"
            android:layout_marginStart="55dp"
            android:layout_marginTop="36dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerName"
            android:autofillHints="" />

        <EditText
            android:id="@+id/registerPassword"
            android:layout_width="297dp"
            android:layout_height="58dp"
            android:layout_marginStart="55dp"
            android:layout_marginTop="34dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerEmail"
            android:autofillHints="" />

        <EditText
            android:id="@+id/registerRepeatPassword"
            android:layout_width="297dp"
            android:layout_height="58dp"
            android:layout_marginStart="55dp"
            android:layout_marginTop="39dp"
            android:ems="10"
            android:hint="@string/repeat_password"
            android:inputType="textPassword"
            android:textColorHint="#FFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerPassword"
            android:autofillHints="" />

        <Button
            android:id="@+id/registerSubmit"
            android:layout_width="242dp"
            android:layout_height="63dp"
            android:layout_marginEnd="83dp"
            android:layout_marginBottom="37dp"
            android:text="@string/submit"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>