<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:background="@color/transparent_green">

    <TextView
        android:id="@+id/playerScoreNumber"
        android:layout_width="101dp"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:text="@string/number"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/playerScoreNumberOfCorrectAnswers"
        android:layout_width="101dp"
        android:layout_height="41dp"
        android:layout_marginStart="38dp"
        android:text="@string/correct_answers"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/playerScoreNumber" />

    <TextView
        android:id="@+id/playerScoreFinalScore"
        android:layout_width="101dp"
        android:layout_height="41dp"
        android:layout_marginStart="38dp"
        android:text="@string/final_score"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/playerScoreNumberOfCorrectAnswers" />
</androidx.constraintlayout.widget.ConstraintLayout>