<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/loginandregister">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="407dp"
        android:layout_height="729dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/loginTItle"
            android:layout_width="194dp"
            android:layout_height="44dp"
            android:layout_marginStart="106dp"
            android:layout_marginTop="32dp"
            android:text="@string/login"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="34sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/loginEmail"
            android:layout_width="297dp"
            android:layout_height="70dp"
            android:layout_marginStart="56dp"
            android:layout_marginTop="71dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColorHint="#FFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginTItle"
            android:autofillHints="" />

        <EditText
            android:id="@+id/loginPassword"
            android:layout_width="297dp"
            android:layout_height="70dp"
            android:layout_marginStart="56dp"
            android:layout_marginTop="54dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="#FFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginEmail"
            android:autofillHints="" />

        <TextView
            android:id="@+id/loginRegisterRedirect"
            android:layout_width="305dp"
            android:layout_height="58dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="32dp"
            android:text="@string/do_not_have_an_account_click_here"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/loginSubmit"
            android:layout_width="224dp"
            android:layout_height="61dp"
            android:layout_marginStart="91dp"
            android:layout_marginTop="93dp"
            android:text="@string/submit"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginPassword" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>